noinst_LIBRARIES=libwrapmduser.a libwraptrader.a
AM_CPPFLAGS = -I$(top_srcdir)/lts -I$(top_srcdir)/ctp -I$(top_srcdir)/femas
libwrapmduser_a_SOURCES=LtsMduserHandler.cpp CtpMduserHandler.cpp FemasMduserHandler.cpp

libwraptrader_a_SOURCES=LtsTraderHandler.cpp CtpTraderHandler.cpp FemasTraderHandler.cpp


